unpackaged/main/default/objects/BLND_DFTE_Expense__c/BLND_DFTE_Expense__c.object-meta.xml
<CustomObject>
	<label>DreamTeam Expense</label>
	<nameField>
		<label>Expense Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>DreamTeam Expenses</pluralLabel>
	<sharingModel>ReadWrite</sharingModel>
</CustomObject>