unpackaged/main/default/objects/BLND_DFTE_Expense__c/fields/BLND_Account_Link__c.field-meta.xml
<CustomField>
	<fullName>BLND_Account_Link__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<label>Account Link</label>
	<referenceTo>Account</referenceTo>
	<relationshipName>R00N30000002PYiJEAW</relationshipName>
	<type>Lookup</type>
</CustomField>