unpackaged/main/default/objects/BLND_DFTE_Expense__c/fields/BLND_Amount__c.field-meta.xml
<CustomField>
	<fullName>BLND_Amount__c</fullName>
	<label>Amount</label>
	<precision>18</precision>
	<scale>2</scale>
	<type>Currency</type>
</CustomField>