unpackaged/main/default/objects/BLND_DFTE_Expense__c/fields/BLND_Case_Link__c.field-meta.xml
<CustomField>
	<fullName>BLND_Case_Link__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<label>Case Link</label>
	<referenceTo>Case</referenceTo>
	<relationshipName>R00N30000002PYh2EAG</relationshipName>
	<type>Lookup</type>
</CustomField>