unpackaged/main/default/objects/BLND_DFTE_Expense__c/fields/BLND_Date__c.field-meta.xml
<CustomField>
	<fullName>BLND_Date__c</fullName>
	<label>Date</label>
	<type>Date</type>
</CustomField>