unpackaged/main/default/objects/BLND_DFTE_Expense__c/fields/BLND_Note__c.field-meta.xml
<CustomField>
	<fullName>BLND_Note__c</fullName>
	<label>Note</label>
	<length>1000</length>
	<type>LongTextArea</type>
</CustomField>