unpackaged/main/default/objects/BLND_DFTE_Expense__c/fields/BLND_Type__c.field-meta.xml
<CustomField>
	<fullName>BLND_Type__c</fullName>
	<label>Type</label>
	<type>Picklist</type>
	<valueSet>
		<valueSetDefinition>
			<value>
				<fullName>No Expense Type</fullName>
			</value>
			<value>
				<fullName>Transportation</fullName>
			</value>
			<value>
				<fullName>Lodging</fullName>
			</value>
			<value>
				<fullName>Meals</fullName>
			</value>
			<value>
				<fullName>Equipment purchase</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>