unpackaged/main/default/objects/BLND_DFTE_Expense__c/fields/BLND_User_Link__c.field-meta.xml
<CustomField>
	<fullName>BLND_User_Link__c</fullName>
	<deleteConstraint>SetNull</deleteConstraint>
	<label>User Link</label>
	<referenceTo>User</referenceTo>
	<relationshipName>R00N30000002PYj9EAG</relationshipName>
	<type>Lookup</type>
</CustomField>